--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,23 @@
+/* Add this to the top of your CSS */
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
 *{
 
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: transparent;
   font-size: 24px;
   font-weight: 1;
-  overflow: hidden;
   
 }
 
